--- a/cv-bio.html
+++ b/cv-bio.html
@@ -41,61 +41,42 @@
 
     <hr class="section-divider">
     <h2>Bio</h2>
-
-    <p>
-      I am an Associate Professor at the von Karman Institute for Fluid Dynamics (VKI),
-      where I work at the interface between <strong>fluid mechanics, data-driven modeling, and control</strong>.
-      My research focuses on developing hybrid approaches that combine physics-based models with machine learning,
-      with the goal of understanding, predicting, and ultimately controlling complex fluid and thermo-fluid systems
-      in real time.
-    </p>
-
-    <p>
-      My background is in experimental and numerical fluid mechanics, but over the years my work has increasingly
-      moved toward <strong>data assimilation, reduced-order modeling, and learning-based control</strong>.
-      I am particularly interested in situations where classical models remain essential but are no longer sufficient
-      on their own, maybe because of off-design conditions, uncertain closure laws, or limited sensing.
-      In these settings, I see tools from machine learning not as a replacement for physics, but as a way to
-      <strong>augment and adapt physical models</strong> in a principled and interpretable manner.
-    </p>
-
-    <p>
 <p>
-A central theme of my recent work, developed together with my students and collaborators, is
-<strong>reinforcement twinning</strong>:
-a framework in which a physics-based digital twin and a learning-based control agent evolve together
-through continuous feedback from data.
-The digital twin refines its state estimates and closure models using measurements, while the control
-agent explores actions whose outcomes, in turn, improve the twin.
-This approach brings together system identification, data assimilation, and reinforcement learning,
-and is currently being explored in applications ranging from wind energy to sloshing dynamics and
-cryogenic storage systems.
-This research direction is supported by a
-<strong>European Research Council (ERC)</strong> grant
-(<a href="https://cordis.europa.eu/project/id/101165479" target="_blank" rel="noopener">
-ERC project on CORDIS
-</a>), enabling the development of learning-enhanced digital twins for complex fluid systems.
+  I am an Associate Professor at the von Karman Institute for Fluid Dynamics (VKI),
+  where I lead the <strong>ML4F — Machine Learning for Fluid Systems</strong> research expertise group.
+  Within ML4F, we work at the interface between
+  <strong>fluid mechanics, data-driven modeling, and control</strong>,
+  developing hybrid approaches that combine physics-based models with machine learning.
+  The overarching goal is to understand, predict, and ultimately control complex
+  fluid and thermo-fluid systems in real time.
 </p>
-  </p>
 
-    <p>
-      Teaching and training are a major part of my activity. Since 2019, I have been deeply involved in the
-      VKI Research Master program and in the organization of international lecture series.
-      I currently coordinate and teach courses in fluid dynamics, data-driven modeling, and machine learning
-      for fluids, with a strong emphasis on hands-on learning and physically grounded algorithms.
-    </p>
+<p>
+  My background is in experimental and numerical fluid mechanics, but over the years my work has increasingly
+  moved toward <strong>data assimilation, reduced-order modeling, and learning-based control</strong>.
+  I am particularly interested in situations where classical models remain essential but are no longer sufficient
+  on their own—due to off-design conditions, uncertain closure laws, or limited sensing.
+  In these settings, I see machine learning not as a replacement for physics, but as a way to
+  <strong>augment and adapt physical models</strong> in a principled and interpretable manner.
+</p>
 
-    <p>
-      I work closely with PhD candidates, Research Master students, and Short Training Program students from
-      diverse backgrounds. Many of my projects are tightly coupled to experiments, and I place particular
-      importance on closing the loop between <strong>theory, computation, and measurements</strong>.
-    </p>
+<p>
+  A central theme of my recent work, developed together with my students and collaborators within ML4F, is
+  <strong>reinforcement twinning</strong>:
+  a framework in which a physics-based digital twin and a learning-based control agent evolve together
+  through continuous feedback from data.
+  The digital twin refines its state estimates and closure models using measurements, while the control
+  agent explores actions whose outcomes, in turn, improve the twin.
+  This approach brings together system identification, data assimilation, and reinforcement learning,
+  and is currently being explored in applications ranging from wind energy to sloshing dynamics and
+  cryogenic storage systems.
+  This research direction is supported by a
+  <strong>European Research Council (ERC)</strong> grant
+  (<a href="https://cordis.europa.eu/project/id/101165479" target="_blank" rel="noopener">
+    ERC project on CORDIS
+  </a>), enabling the development of learning-enhanced digital twins for complex fluid systems.
+</p>
 
-    <p>
-      My long-term goal is to contribute to the development of
-      <strong>adaptive, learning-enhanced engineering systems</strong> that remain physically interpretable
-      while being robust to uncertainty and changing operating conditions.
-    </p>
 
     <hr class="section-divider">
  <h2>Featured VKI-AA Article in 2019</h2>
